fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 }
 .gen_number label {
 
-    margin-left: 5.5% ;
+    margin: auto ;
     width: 100% ;
 
 
@@ -51,7 +51,7 @@
 #btn_gen {
 
     margin-top: 10px ;
-    margin-left: 12% ;
+    margin: auto ;
     width: 20% ;
     text-align: center;
     background-color: blue;
@@ -72,7 +72,7 @@
 
 #score {
 
-    margin-left: 15%;
+    margin: auto;
 }
 
 .dice_image {
